--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
     buildFeatures {
         dataBinding true
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
     def versionPropsFile = file('version.properties')
@@ -67,9 +71,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Coroutine
-    def coroutine_version = '1.3.9-native-mt-2'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+    def coroutines_version = '1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+
+    //ViewModel
+    def androidx_lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_version"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 
     // ShowCaseView
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
@@ -91,21 +103,22 @@ dependencies {
     //Date Time
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
-
     // WorkManager
     def work_version = "2.4.0"
-    // WorkManager (Java only)
-    implementation "androidx.work:work-runtime:$work_version"
-    // WorkManager (Kotlin + coroutines)
-    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.work:work-runtime:$work_version"   // WorkManager (Java only)
+    implementation "androidx.work:work-runtime-ktx:$work_version"   // WorkManager (Kotlin + coroutines)
 
-    // optional - GCMNetworkManager support
+    // GCMNetworkManager support
     implementation "androidx.work:work-gcm:$work_version"
 
     //RxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
+
+    //Fragment
+    def fragment_version = "1.2.5"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
 }
 repositories {
