--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,19 @@ dependencies {
     def fragment_version = "1.2.5"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //MultiStateView
+    implementation  'com.github.Kennyc1012:MultiStateView:2.1.2'
+
+    //SDP
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+
 }
 repositories {
     mavenCentral()
