--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.sections.dashboardActivity.DashboardActivity"></activity>
+        <activity
+            android:name=".ui.sections.dashboardActivity.DashboardActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.list_activity.FormsReportCluster"
             android:label="Forms Report"
