*Working on child list functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
@@ -78,6 +79,7 @@ dependencies {
 
     //ViewModel
     def androidx_lifecycle_version = "2.2.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$androidx_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_version"
@@ -120,9 +122,6 @@ dependencies {
     //Fragment
     def fragment_version = "1.2.5"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
-
-    // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
