--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+plugins{
+   id 'com.android.application'
+   id 'kotlin-android'
+   id 'kotlin-android-extensions'
+   id 'kotlin-kapt'
+}
 
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.2'
+    buildToolsVersion '30.0.3'
     buildFeatures {
         dataBinding true
     }
@@ -30,7 +32,7 @@ android {
             minSdkVersion 22
             targetSdkVersion 30
             versionCode code
-            versionName "0.0"
+            versionName "0.1"
             testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         }
     } else {
