- Fixed CData error - upgraded Gradle and JAVA

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,2 +1,4 @@
-#Tue Jan 12 16:34:14 PKT 2021
-VERSION_CODE=1140
+#Fri Sep 03 14:53:16 PKT 2021
+VERSION_BUILD=1159
+VERSION_NUMBER=1
+VERSION_PATCH=0
