--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,26 +15,76 @@ android {
         jvmTarget = '1.8'
     }
 
+    Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
 
+    //Create a version properties file and add required properties with default values
+    if (!versionPropsFile.exists()) {
+        versionProps['VERSION_PATCH'] = "0"
+        versionProps['VERSION_BUILD'] = "0"
+        versionProps['VERSION_NUMBER'] = "0"
+
+        Writer writer = new FileWriter(versionPropsFile, false)
+        versionProps.store(versionPropsFile.newWriter(), null)
+    }
+
+    // Read existing
     if (versionPropsFile.canRead()) {
-        Properties versionProps = new Properties()
+        versionProps = new Properties()
 
         versionProps.load(new FileInputStream(versionPropsFile))
 
-        def code = versionProps['VERSION_CODE'].toInteger() + 1
+        def value = 0
+        def versionType = "D"
 
-        versionProps['VERSION_CODE'] = code.toString()
+
+        def runTasks = gradle.startParameter.taskNames
+        if ('assemble' in runTasks || ':app:assembleRelease' in runTasks || 'aR' in runTasks) {
+            value = 1
+            versionType = "R"
+        }
+
+        def versionNumber = 1
+        //  def versionMinor = 0
+        def versionPatch = versionProps['VERSION_PATCH'].toInteger() + value
+        def versionBuild = versionProps['VERSION_BUILD'].toInteger() + 1
+        //def versionNumber = versionProps['VERSION_NUMBER'].toInteger() + value
+
+        versionProps['VERSION_PATCH'] = versionPatch.toString()
+        versionProps['VERSION_BUILD'] = versionBuild.toString()
+        versionProps['VERSION_NUMBER'] = versionNumber.toString()
+
         versionProps.store(versionPropsFile.newWriter(), null)
 
         defaultConfig {
-            applicationId "edu.aku.hassannaqvi.matiari_cohorts"
+            applicationId "edu.aku.hassannaqvi.tajik_anemia_study"
+            versionCode versionBuild
+            versionName "${versionNumber}.${versionPatch}${versionType}"
             minSdkVersion 22
-            targetSdkVersion 30
-            versionCode code
-            versionName "1.0"
-            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+            targetSdkVersion 29
         }
+
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+
+                def appName = rootProject.name
+                def date = new Date()
+                def formattedDate = date.format('yyyy_MM_dd')
+
+                def outputDir = new File("${project.buildDir.absolutePath}/outputs/apk/${variant.flavorName}/${variant.buildType.name}")
+                //def outputFileName = "app-${variant.flavorName}-${variant.buildType.name}.apk"
+                def outputFileName = "${appName}_${formattedDate}_${versionType}v${versionBuild}.apk"
+                // def outputFile = new File("$outputDir/$outputFileName")
+                variant.packageApplicationProvider.get().outputDirectory = new File("$outputDir")
+                output.outputFileName = outputFileName
+                /*  if (outputFileName != null && outputFileName.endsWith('.apk')) {
+                      //output.outputFileName = outputFileName
+                      output.outputFileName = new File("${project.buildDir.absolutePath}/outputs/apk/", "${outputDir}-${versionMajor}.${versionMinor}.${versionPatch}-${outputFileName}")
+                  }*/
+
+            }
+        }
+
     } else {
         throw new GradleException("Could not read version.properties!")
     }
@@ -56,36 +106,43 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // GSON
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.8'
 
     // Kotlin
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Coroutine
-    def coroutines_version = '1.3.9'
+    def coroutines_version = '1.5.2-native-mt'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     //ViewModel
-    def androidx_lifecycle_version = "2.2.0"
+    def lifecycle_version = '2.4.0-alpha03'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:$androidx_lifecycle_version"
+/*    implementation "androidx.lifecycle:lifecycle-extensions:$androidx_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_version"*/
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")
+
     testImplementation 'android.arch.core:core-testing:1.1.1'
 
     // ShowCaseView
@@ -100,16 +157,16 @@ dependencies {
     implementation 'com.github.arcadefire:nice-spinner:1.4.4'
 
     // New Location Service
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     //DatePicker
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
 
     //Date Time
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 
     // WorkManager
-    def work_version = "2.4.0"
+    def work_version = '2.5.0'
     implementation "androidx.work:work-runtime:$work_version"   // WorkManager (Java only)
     implementation "androidx.work:work-runtime-ktx:$work_version"   // WorkManager (Kotlin + coroutines)
 
@@ -118,22 +175,22 @@ dependencies {
 
     //RxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.1'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
 
     //Fragment
-    def fragment_version = "1.2.5"
+    def fragment_version = '1.3.6'
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //MultiStateView
     implementation  'com.github.Kennyc1012:MultiStateView:2.1.2'
 
     //SDP
-    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
     //Permissions
     implementation 'com.nabinbhandari.android:permissions:3.8'
